@@ -1,5 +1,11 @@
 2011-05-19  Paul Eggert  <eggert@cs.ucla.edu>
 
+	intprops: work around IRIX 6.5 cc bug with 0u - 0u + -1
+	See http://lists.gnu.org/archive/html/bug-gnulib/2011-05/msg00406.html
+	* lib/intprops.h (_GL_INT_NEGATE_CONVERT): New macro.
+	(_GL_INT_SIGNED, _GL_INT_MAXIMUM, _GL_DIVIDE_OVERFLOW):
+	(_GL_REMAINDER_OVERFLOW): Use it.
+
 	intprops: work around C compiler bugs
 	* lib/intprops.h (INT_MULTIPLY_RANGE_OVERFLOW): Work around compiler
 	bug in Sun C 5.11 2010/08/13 and other compilers; see
